# mpv-img-tricks

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  slideshow
.cursor/rules/: three-lens-external-docs.mdc
.cursor/skills/: README.md
.cursor/skills/tile-memory-profiling/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  discovery.md  plan.md  recommendations.md  setup.md
docs/archived/: discovery.md
docs/delivery/: 2026-04-23-tile-performance-guardrails.md
docs/dev-log/: 2026-03-31-cli-ops-hardening.md  2026-04-16-tile-compositing-ram.md
fixtures/images/: README.md
mpv-scripts/: blast.lua  slideshow-bindings.lua
mpv_img_tricks/: __init__.py  __main__.py  cli.py  config.py  media_discovery.py  mpv_ipc.py  mpv_pipeline.py  paths.py  slideshow_bindings.py
mpv_img_tricks/pipelines/: __init__.py  basic_slideshow.py  live.py  plain_render.py  tile_live.py
python/: slideshow_cli.py
scripts/: fade.lua  flexible-blast.sh  image-effects.sh  images-to-video.sh  img-effects.sh  make-video.sh  mpv-pipeline.sh  pairshow.sh  slideshow.sh
scripts/lib/: constants.sh  discovery.sh  mpv_slideshow_bindings.sh  path.sh  pipeline.sh  validate.sh
tests/: conftest.py  run-unit.sh  test_cli.py  test_cli_resolution_explicit.py  test_config.py  test_ffmpeg_tile_util.py  test_media_discovery.py  test_mpv_pipeline.py  test_paths.py  test_tile_compositing_caps.py  test_tile_functional.py
tests/manual/: README.md  generate-fixtures.sh  smoke-renders.sh
tests/unit/: ffprobe-tile-nostdin-rejected.sh  img-effects-ken-burns.sh  img-effects-nounset-empty-arrays.sh  img-effects-tile-animation.sh  img-effects-tile-fixed-grid.sh  mpv-pipeline-no-slideshow-bindings.sh  python-cli-spike.sh  slideshow-scale-modes.sh
