[project]
name = "mpv-img-tricks"
version = "0.1.0"
description = "Live slideshows and ffmpeg effects over image folders (Python CLI over Bash backends)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
slideshow = "mpv_img_tricks.cli:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpv_img_tricks"]
