[project]
name = "mpv-img-tricks"
version = "0.1.0"
description = "Live slideshows and tiled image grids (Python CLI; Bash backends for mpv tile path)."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
slideshow = "mpv_img_tricks.cli:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpv_img_tricks"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--import-mode=importlib"]
markers = [
    "tile_functional: in-process tile pipeline with stubbed mpv/ffmpeg/ffprobe",
    "integration: optional subprocess/uv or heavy checks (not part of default fast contract)",
]
